# book_recommendations

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: README.txt  bf.ipynb  qdrant_search.ipynb  vectorise_and_search.ipynb
utils/: data_utils.py
