[tool.poetry]
name = "book-recomendations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "book_recomendations"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.3"
numpy = "^1.26.1"
qdrant-client = "^1.6.4"
matplotlib = "^3.8.1"
plotly = "^5.18.0"
nbformat = ">=4.2.0"
seaborn = "^0.13.0"
transformers = "^4.35.1"
torch = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
